hdone/objects/Identifier_Type__c.object
<CustomObject>
    <description>Connects identifiers with Organizations and/or Providers. Enables a Organization or Provider to have as many identifiers as necessary. Types of identifiers are listed here.</description>
    <fields>
        <fullName>AccountIdFormula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>IF(NOT(ISBLANK(Facility__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;,
(CASE(  Facility__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Facility__c),
&quot;HealthDetail&quot;, Facility__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Facility__r.SourceOrg__c , &quot;HealthDetail&quot;,Facility__r.ExternalId__c,
&quot;Customer&quot;, Facility__r.Remote_Account_Id__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if phone association is active for individual and address</description>
        <inlineHelpText>Is phone association active?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AddressIdFormula__c</fullName>
        <formula>IF(NOT(ISBLANK(Address__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;,
(CASE(  Address__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Address__c),
&quot;HealthDetail&quot;, Address__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Address__r.SourceOrg__c , &quot;HealthDetail&quot;,Address__r.ExternalId__c,
&quot;Customer&quot;, Address__r.Remote_AddressId__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AddressIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressTypeId_Formula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>IF(NOT(ISBLANK(Address_Type__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;,
(CASE(  Address_Type__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Address_Type__c),
&quot;HealthDetail&quot;, Address_Type__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Address_Type__r.SourceOrg__c , &quot;HealthDetail&quot;,Address_Type__r.ExternalId__c,
&quot;Customer&quot;, Address_Type__r.Remote_AddressType_Id__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <label>AddressTypeId Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Address Type</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>The providers must match. Please review your selections.</errorMessage>
            <filterItems>
                <field>Address_Type__c.Provider__c</field>
                <operation>equals</operation>
                <valueField>$Source.Provider__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address_Type__c</referenceTo>
        <relationshipLabel>Identifier Types</relationshipLabel>
        <relationshipName>Address_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Related Address</description>
        <inlineHelpText>Related Address</inlineHelpText>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Identifier Types</relationshipLabel>
        <relationshipName>Identifier_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments, if applicable</description>
        <inlineHelpText>Comments, if applicable</inlineHelpText>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfirmationId_Formula__c</fullName>
        <description>Confirmation Id Formula</description>
        <formula>IF(NOT(ISBLANK(Confirmation__c)),
CASE( SourceOrg__c , &quot;Customer&quot;,
(CASE( Confirmation__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Confirmation__c),
&quot;HealthDetail&quot;, Confirmation__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Confirmation__r.SourceOrg__c , &quot;HealthDetail&quot;,Confirmation__r.ExternalId__c,
&quot;Customer&quot;, Confirmation__r.Remote_Confirmation_Id__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConfirmationId Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_Source__c</fullName>
        <description>Source for most recent confirmation</description>
        <inlineHelpText>Source for most recent confirmation</inlineHelpText>
        <label>Confirmation Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>NPPES File</fullName>
                </value>
                <value>
                    <fullName>PhoneAddressMismatch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Confirmation</description>
        <inlineHelpText>Lookup to Confirmation</inlineHelpText>
        <label>Confirmation</label>
        <referenceTo>Confirmation__c</referenceTo>
        <relationshipLabel>Identifier Types</relationshipLabel>
        <relationshipName>Identifier_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerId__c</fullName>
        <description>External Id from Customer. Should be unique across objects for customer.</description>
        <externalId>true</externalId>
        <inlineHelpText>External or Customer Id</inlineHelpText>
        <label>CustomerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <description>Source of data</description>
        <inlineHelpText>Source of data</inlineHelpText>
        <label>DataSource</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ConfirmationData</fullName>
                </value>
                <value>
                    <fullName>Internal File</fullName>
                </value>
                <value>
                    <fullName>Online Directory</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ExternalId</description>
        <externalId>true</externalId>
        <inlineHelpText>ExternalId</inlineHelpText>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Identifier Types</relationshipLabel>
        <relationshipName>Identifier_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flow_Status__c</fullName>
        <label>Flow Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IdType__c</fullName>
        <label>IdType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Job Title</fullName>
                </value>
                <value>
                    <fullName>Language</fullName>
                </value>
                <value>
                    <fullName>NPI</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Provider_Office</fullName>
                </value>
                <value>
                    <fullName>Plan_Product</fullName>
                </value>
                <value>
                    <fullName>Tax Id</fullName>
                </value>
                <value>
                    <fullName>MedsId</fullName>
                </value>
                <value>
                    <fullName>MPIN</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IdentifierId_Formula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>IF(NOT(ISBLANK(Identifier__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;,
(CASE(  Identifier__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Identifier__c),
&quot;HealthDetail&quot;, Identifier__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Identifier__r.SourceOrg__c , &quot;HealthDetail&quot;,Identifier__r.ExternalId__c,
&quot;Customer&quot;, Identifier__r.Remote_Identifier_Id__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <label>IdentifierId Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdentifierMasterContactId__c</fullName>
        <description>Displays Value from Identifier. Used for data loading lookups. Used to be MasterContactId which is what is in API</description>
        <formula>Identifier__r.Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays Value from Identifier.</inlineHelpText>
        <label>IdentifierValue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdentifierTypeId_Formula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>CASE(  SourceOrg__c  , &quot;Customer&quot;,
CASESAFEID( Id),
&quot;HealthDetail&quot;,
ExternalId__c,&quot;Error&quot;)

/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <label>IdentifierTypeId Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier_Display__c</fullName>
        <formula>CASE(1,IF(ISPICKVAL(IdType__c, &quot;Phone&quot;),1,0),  Identifier__r.Phone__c,
IF(ISPICKVAL(IdType__c, &quot;Website&quot;),1,0), Identifier__r.URL__c ,
IF(ISPICKVAL(IdType__c, &quot;Email&quot;),1,0),  Identifier__r.Email__c  ,
IF(ISPICKVAL(IdType__c, &quot;Specialty&quot;),1,0),  Specialty__r.Specialty_Name__c,
Identifier__r.Value__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identifier Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier_Type_Related_External__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifier Type Related</description>
        <inlineHelpText>Identifier Type Related</inlineHelpText>
        <label>Identifier Type Related External</label>
        <referenceTo>Identifier_Type__c</referenceTo>
        <relationshipLabel>Identifier Types (Identifier Type Related External)</relationshipLabel>
        <relationshipName>Identifier_Types2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Identifier_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Identifier Type</description>
        <inlineHelpText>Related Identifier Type</inlineHelpText>
        <label>Related Identifier Type</label>
        <referenceTo>Identifier_Type__c</referenceTo>
        <relationshipLabel>Identifier Types</relationshipLabel>
        <relationshipName>Identifier_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Identifier</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.IdType__c</field>
                <operation>equals</operation>
                <valueField>Identifier__c.Type__c</valueField>
            </filterItems>
            <infoMessage>You are selecting a different type of relationship.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Identifier__c</referenceTo>
        <relationshipLabel>Identifiers</relationshipLabel>
        <relationshipName>Identifiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IssuingState__c</fullName>
        <label>IssuingState</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PNRCStatusCheck__c</fullName>
        <description>Last date and time the PartnerNetworkRecordConnection status was updated</description>
        <inlineHelpText>Last date and time the PartnerNetworkRecordConnection status was updated</inlineHelpText>
        <label>PNRCStatusCheck</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>Product code. Uses values from Custom Metadata Settings. As of Winter 16 no lookup available to these records.</description>
        <inlineHelpText>Product code. Uses values from Custom Metadata Settings.</inlineHelpText>
        <label>Product Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <inlineHelpText>Product Name</inlineHelpText>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProviderId_Formula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org</description>
        <formula>IF(NOT(ISBLANK(Provider__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;,
(CASE(  Provider__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Provider__c),
&quot;HealthDetail&quot;, Provider__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Provider__r.SourceOrg__c , &quot;HealthDetail&quot;,Provider__r.ExternalId__c,
&quot;Customer&quot;, Provider__r.Remote_Provider_Id__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <label>ProviderId Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to provider</description>
        <inlineHelpText>Lookup to provider</inlineHelpText>
        <label>Provider</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>ProviderConnections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Text__c</fullName>
        <description>Used for Salesforce to Salesforce sharing</description>
        <formula>/* Gets name of Record Type for Salesforce to Salesforce sharing */
RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Record Type Name</inlineHelpText>
        <label>Record Type Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedIdentifierTypeIdFormula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>IF(NOT(ISBLANK(Identifier_Type__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;,
(CASE(  Identifier_Type__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Identifier_Type__c),
&quot;HealthDetail&quot;, Identifier_Type__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Identifier_Type__r.SourceOrg__c , &quot;HealthDetail&quot;,Identifier_Type__r.ExternalId__c,
&quot;Customer&quot;, Identifier_Type__r.Remote_IdentifierTypeId__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer record Id or External Id</inlineHelpText>
        <label>RelatedIdentifierTypeIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Account_Id__c</fullName>
        <description>Remote Account Id</description>
        <externalId>true</externalId>
        <label>Remote Account_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_AddressType_Id__c</fullName>
        <description>Remote AddressType Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Remote AddressType Id</inlineHelpText>
        <label>Remote AddressType_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Address_Id__c</fullName>
        <description>Remote Address Id</description>
        <inlineHelpText>Remote Address Id</inlineHelpText>
        <label>Remote Address_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Confirmation_Id__c</fullName>
        <description>Remote Confirmation Id</description>
        <inlineHelpText>Remote Confirmation Id</inlineHelpText>
        <label>Remote Confirmation_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_IdentifierTypeId__c</fullName>
        <description>Remote IdentifierType Id</description>
        <inlineHelpText>Remote IdentifierType Id</inlineHelpText>
        <label>Remote IdentifierTypeId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Identifier_Id__c</fullName>
        <description>Remote Identifier Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Remote Identifier Id</inlineHelpText>
        <label>Remote Identifier_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Provider_Id__c</fullName>
        <description>Remote Provider Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Remote Provider Id</inlineHelpText>
        <label>Remote Provider_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Record_Type__c</fullName>
        <description>Value for Remote Record Type. Used for Salesforce to Salesforce</description>
        <inlineHelpText>Value for Remote Record Type</inlineHelpText>
        <label>Remote Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_SpecialtyId__c</fullName>
        <description>SpecialtyId from remote system</description>
        <inlineHelpText>SpecialtyId from remote system</inlineHelpText>
        <label>Remote SpecialtyId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_PartnerConnection_Id__c</fullName>
        <description>Sf2Sf PartnerConnectionId Id from PartnerNetworkConnection</description>
        <externalId>true</externalId>
        <inlineHelpText>Sf2Sf PartnerConnectionId Id from PartnerNetworkConnection</inlineHelpText>
        <label>Sf2Sf_PartnerConnection_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareId__c</fullName>
        <description>Id from PartnerNetworkRecordConnection for shared record.</description>
        <inlineHelpText>Id from PartnerNetworkRecordConnection for shared record.</inlineHelpText>
        <label>Sf2Sf ShareId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareName__c</fullName>
        <description>Sharing name for Salesforce to Salesforce. Uses Custom setting to get name as PartnerNetworkConnection name cannot be changed and can be confusing</description>
        <inlineHelpText>Sharing name for Salesforce to Salesforce from Custom Setting</inlineHelpText>
        <label>Sf2Sf_ShareName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareStatus__c</fullName>
        <description>Populates shared status for Salesforce to Salesforce connection. Cannot read status from object only from PartnerNetworkConnection object</description>
        <inlineHelpText>Shared status for Salesforce to Salesforce connection. Not real time.</inlineHelpText>
        <label>Sf2Sf_ShareStatus</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if record should be shared with other organization. Used for Salesforce to Salesforce.</description>
        <inlineHelpText>Should record be shared?</inlineHelpText>
        <label>Share Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceOrg__c</fullName>
        <description>Identifies which is source org for record. If record is shared FROM customer to HealthDetail then Customer else if shared other way HealthDetail. Was using formula fields but getting relationship errors.</description>
        <inlineHelpText>Identifies which is source org for record Customer or HealthDetail</inlineHelpText>
        <label>SourceOrg</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>HealthDetail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SpecialtyId_Formula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org</description>
        <formula>IF(NOT(ISBLANK(Specialty__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;,
(CASE(  Specialty__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Specialty__c),
&quot;HealthDetail&quot;, Specialty__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Specialty__r.SourceOrg__c , &quot;HealthDetail&quot;,Specialty__r.ExternalId__c,
&quot;Customer&quot;, Specialty__r.Remote_SpecialtyId__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <inlineHelpText>Id for record. Used for Salesforce to Salesforce sharing</inlineHelpText>
        <label>SpecialtyId Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Specialty. Probably do not need to have Specialty as separate object.</description>
        <inlineHelpText>Lookup to Specialty.</inlineHelpText>
        <label>Specialty</label>
        <referenceTo>Specialty__c</referenceTo>
        <relationshipLabel>Identifier Types</relationshipLabel>
        <relationshipName>Identifier_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Storage_addressid__c</fullName>
        <description>AddressId from storage object. Original customer addresses moved off platform to storage such as Big Object. Used to map back for reporting</description>
        <inlineHelpText>AddressId from storage object</inlineHelpText>
        <label>Storage_addressid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of phone</description>
        <inlineHelpText>Type of phone</inlineHelpText>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>IdType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Fax - Office</fullName>
                </value>
                <value>
                    <fullName>Phone - Home</fullName>
                </value>
                <value>
                    <fullName>Phone - Office</fullName>
                </value>
                <value>
                    <fullName>Phone - Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Main Location</fullName>
                </value>
                <value>
                    <fullName>Email - Personal</fullName>
                </value>
                <value>
                    <fullName>NPI</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Email - Office</fullName>
                </value>
                <value>
                    <fullName>Fluent All</fullName>
                </value>
                <value>
                    <fullName>Reading</fullName>
                </value>
                <value>
                    <fullName>Writing</fullName>
                </value>
                <value>
                    <fullName>Speaking</fullName>
                </value>
                <value>
                    <fullName>Listening</fullName>
                </value>
                <value>
                    <fullName>Limited Only</fullName>
                </value>
                <value>
                    <fullName>Practicing</fullName>
                </value>
                <value>
                    <fullName>Participating</fullName>
                </value>
                <value>
                    <fullName>Accepting New Patients</fullName>
                </value>
                <value>
                    <fullName>Patients Seen Here</fullName>
                </value>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>Work Location</fullName>
                </value>
                <value>
                    <fullName>Directory Check Online</fullName>
                </value>
                <value>
                    <fullName>Directory Check Print</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Incorrect</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Identifier Type</label>
    <listViews>
        <fullName>All_Email</fullName>
        <columns>NAME</columns>
        <columns>Identifier_Display__c</columns>
        <columns>Provider__c</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IdType__c</field>
            <operation>equals</operation>
            <value>Email</value>
        </filters>
        <label>All Email</label>
    </listViews>
    <listViews>
        <fullName>All_Job_Title</fullName>
        <columns>NAME</columns>
        <columns>Identifier_Display__c</columns>
        <columns>Provider__c</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IdType__c</field>
            <operation>equals</operation>
            <value>Job Title</value>
        </filters>
        <label>All Job Title</label>
    </listViews>
    <listViews>
        <fullName>All_Languages</fullName>
        <columns>NAME</columns>
        <columns>Identifier_Display__c</columns>
        <columns>Provider__c</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IdType__c</field>
            <operation>equals</operation>
            <value>Language</value>
        </filters>
        <label>All Languages</label>
    </listViews>
    <listViews>
        <fullName>All_Phone</fullName>
        <columns>NAME</columns>
        <columns>Identifier_Display__c</columns>
        <columns>Provider__c</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IdType__c</field>
            <operation>equals</operation>
            <value>Phone</value>
        </filters>
        <label>All Phone</label>
    </listViews>
    <listViews>
        <fullName>All_Website</fullName>
        <columns>NAME</columns>
        <columns>Identifier_Display__c</columns>
        <columns>Provider__c</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IdType__c</field>
            <operation>equals</operation>
            <value>Website</value>
        </filters>
        <label>All Website</label>
    </listViews>
    <listViews>
        <fullName>Created_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Identifier_Display__c</columns>
        <columns>Provider__c</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Created This Week</label>
    </listViews>
    <nameField>
        <displayFormat>idtype-{00000000}</displayFormat>
        <label>IdentifierType Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Identifier Types</pluralLabel>
    <recordTypes>
        <fullName>FacPhEmWeb</fullName>
        <active>false</active>
        <description>Facility Phone Email or Web - Do Not Change</description>
        <label>Phone Email or Website</label>
    </recordTypes>
    <recordTypes>
        <fullName>FacSpecialty</fullName>
        <active>false</active>
        <description>Facility Specialty - Do Not Change</description>
        <label>Specialties</label>
    </recordTypes>
    <recordTypes>
        <fullName>Facility_Email</fullName>
        <active>false</active>
        <description>Facility Email - Do Not Change</description>
        <label>Facility Email</label>
    </recordTypes>
</CustomObject>